name:                haskell-media-embed-reactflux
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/adarqui/haskell-media-embed-reactflux#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Darqui
maintainer:          andrew.darqui@gmail.com
copyright:           2016 Andrew Darqui
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Media.Embed.ReactFlux
  build-depends:       base >= 4.7 && < 5
                     , react-flux
                     , text
                     , haskell-media-embed

  if impl(ghcjs)
     build-depends:    ghcjs-base

  ghc-options:         -Wall
  default-language:    Haskell2010

test-suite haskell-media-embed-reactflux-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-media-embed-reactflux
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adarqui/haskell-media-embed-reactflux
